@@ -1,3 +1,4 @@
+2407 [Update] disabled megui.xvidvideo.ru mirror as it is out of sync
 2406 [AviSynth] only load portable DirectShowSource.dll if portable mode is used
 2405 [Log] improved avs log information
 2404 [MediaInfo] ignore phantom audio tracks
